// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Chip component > should match a snapshot 1`] = `
<DocumentFragment>
  <input
    class="mocked-styled-0 el-chip-checkbox"
    id="test-static-id"
    type="checkbox"
  />
  <label
    class="mocked-styled-1 el-chip-label"
    for="test-static-id"
  >
    Some Content
  </label>
</DocumentFragment>
`;

exports[`ChipGroup component > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-chip-group"
  >
    <div
      class="mocked-styled-3 el-chip-group-inner"
    >
      <input
        class="mocked-styled-0 el-chip-checkbox"
        id="test-static-id"
        type="checkbox"
      />
      <label
        class="mocked-styled-1 el-chip-label"
        for="test-static-id"
      >
        Some Content
      </label>
      <input
        class="mocked-styled-0 el-chip-checkbox"
        id="test-static-id"
        type="checkbox"
      />
      <label
        class="mocked-styled-1 el-chip-label"
        for="test-static-id"
      >
        Some Content
      </label>
    </div>
  </div>
</DocumentFragment>
`;
